--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body ng-app="recipeApp-modules">
   <header>
-    <h1>spatch</h1>
+    <h1><a href="#/home">spatch</a></h1>
     <a href="#/addRecipe"><span>+</span></a>
+    <a href="#/groceryList"><span><img src="http://cdn.flaticon.com/png/256/8819.png"/ width=30px ></span></a>
   </header>
   <div class="container">
     <ng-view></ng-view>
@@ -17,7 +18,7 @@
 
 
 
-<script src="bower_components/angular/angular.min.js"></script>
+<script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-route/angular-route.min.js"></script>
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/recipeCtrl.js"></script>
