--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
 <script src="bower_components/angular-route/angular-route.min.js"></script>
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/recipeCtrl.js"></script>
+<script src="scripts/controllers/groceryCtrl.js"></script>
 </body>
 </html>
