--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <script src="bower_components/angular-route/angular-route.min.js"></script>
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="scripts/app.js"></script>
+<script src="scripts/controllers/homeCtrl.js"></script>
 <script src="scripts/controllers/recipeCtrl.js"></script>
 
 </body>
