updated all the errors

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a href="#/addRecipe"><span>+</span></a>
     <a href="#/groceryList"><span><img src="http://cdn.flaticon.com/png/256/8819.png"/ width=30px ></span></a>
   </header>
-  
+
   <div class="container">
     <ng-view></ng-view>
   </div>
@@ -26,9 +26,8 @@
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/homeCtrl.js"></script>
 <script src="scripts/controllers/recipeCtrl.js"></script>
-
 <script src="scripts/controllers/groceryCtrl.js"></script>
-
+<script src="scripts/controllers/editCtrl.js"></script>
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 
 </body>
