--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <script src="bower_components/angular-route/angular-route.min.js"></script>
 
 <script src="scripts/app.js"></script>
+<script src="scripts/services/services.js"></script>
 <script src="scripts/controllers/homeCtrl.js"></script>
 <script src="scripts/controllers/recipeCtrl.js"></script>
 <script src="scripts/controllers/groceryCtrl.js"></script>
