--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
 
 
-
+<!--TEST-->
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-route/angular-route.min.js"></script>
 
