--- a/index.html
+++ b/index.html
@@ -11,16 +11,19 @@
 <body ng-app="recipeApp-modules">
     <img src="images/bg.png" class="bg">
 
-  <header>
-    <a href="#/addRecipe"><i class="fa fa-plus"></i></a>
-    <a href="#/groceryList"><i class="fa fa-shopping-cart"></i></a>
-  </header>
 
   <div class="container">
     <ng-view></ng-view>
 
   </div>
-  <center><img src="images/logo.png" id="homeLogo" alt=""></center>
+
+
+  <footer>
+     <img src="images/logo.png" id="homeLogo" alt="">
+    <a href="#/addRecipe"><i class="fa fa-plus"></i></a>
+    <a href="#/groceryList"><i class="fa fa-shopping-cart"></i></a>
+
+</footer>
 
 
 
