--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 
     <header>
       <span><a href="#"><img src="images/logo.png" id="homeLogo"></a></span><br>
-      <a href="#/addRecipe"><i class="fa fa-plus"></i></a>
-      <a href="#/groceryList"><i class="fa fa-shopping-cart"></i></a>
-
+      <nav>
+      <a href="#/addRecipe"><i id="first" class="fa fa-plus"></i></a>
+      <a href="#/groceryList"><i id="second" class="fa fa-shopping-cart"></i></a>
+      </nav>
     </header>
 
-
+    <div class="container">
     <ng-view></ng-view>
+    </div>
 
 
 
