made some minor transitions

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <header>
       <span><a href="#"><img src="images/logo.png" id="homeLogo"></a></span><br>
       <nav>
-      <a href="#/addRecipe"><i id="first" class="fa fa-plus"></i></a>
+      <a href="#/addRecipe"><i id="first" class="fa fa-plus-circle"></i></a>
+          &nbsp;&nbsp;&nbsp;&nbsp;
       <a href="#/groceryList"><i id="second" class="fa fa-shopping-cart"></i></a>
       </nav>
     </header>
