fixed transitions a bit more

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     </header>
 
     <div class="container">
-    <ng-view class="slideup">
+    <ng-view class="slideup"></ng-view>
     </div>
 
-    
+
 
 
 
