--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       </nav>
     </header>
 
-    <div class="container">
-    <ng-view class="slideup"></ng-view>
-    </div>
+    <!-- <div class="container"> -->
+    <ng-view class="slide"></ng-view>
+    <!-- </div> -->
 
 
 
